// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`solidstartBundleAnalysisPlugin > when called > returns a plugin object 1`] = `
{
  "name": "@codecov/solidstart-plugin",
  "pluginVersion": StringMatching /^1\.\d+\.\d+$/,
  "version": "2",
  "vite": {
    "generateBundle": [Function],
  },
}
`;

exports[`sveltekitBundleAnalysisPlugin > when called > returns a plugin object 1`] = `
{
  "name": "@codecov/sveltekit-plugin",
  "pluginVersion": StringMatching /^1\.\d+\.\d+$/,
  "version": "2",
  "vite": {
    "generateBundle": [Function],
  },
}
`;
